# daisybell

./: .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.rst  SECURITY.md  pyproject.toml  renovate.json  requirements.txt  setup.py
.github/: CODEOWNERS
.github/workflows/: codeql-analysis.yml  docker-test.yml  docker.yml  pypi.yml  python-package.yml  secrets-scan.yml  semgrep.yml
.github/workflows/config/: whispers-config.yml
aiscan/: __init__.py  __main__.py
daisybell/: NERutils.py  VisualizationUtils.py  __init__.py  __main__.py  daisybell.py  test.py
daisybell/helpers/: chat.py  common.py  dataset.py
daisybell/scanners/: README.md  __init__.py  chatbot_ai_alignment.py  masking_language_bias.py  ner_language_bias.py  scanner.py  zero_shot_language_bias.py
data/input/corpus/: Adventures_of_Huckleberry_Finn  Anne_of_Green_Gables  Dracula  Emma  Frankenstein  Jane_Eyre  Pride_and_Prejudice  The_Catcher_in_the_Rye  The_Great_Gatsby  The_Picture_of_Dorian_Gray  The_Secret_Garden  Treasure_Island  Wuthering_Heights
data/input/namesDB/: wikidata_person_names-v1.csv
data/output/experiments/BackDoor_with_Saisiyat_Subword2022_06_23-03:13:23_PM/results/: Bias_metrics_results.csv
data/output/experiments/BackDoor_with_Saisiyat_Subword2022_06_23-03:18:51_PM/: quadruples_Amis_Adventures_of_Huckleberry_Finn_Davlanxlmrobertabasenerhrl.txt  quadruples_Chinese_Adventures_of_Huckleberry_Finn_Davlanxlmrobertabasenerhrl.txt  quadruples_English_Adventures_of_Huckleberry_Finn_Davlanxlmrobertabasenerhrl.txt  quadruples_Finnish_Adventures_of_Huckleberry_Finn_Davlanxlmrobertabasenerhrl.txt  quadruples_Greek_Adventures_of_Huckleberry_Finn_Davlanxlmrobertabasenerhrl.txt  quadruples_Hebrew_Adventures_of_Huckleberry_Finn_Davlanxlmrobertabasenerhrl.txt  quadruples_Icelandic_Adventures_of_Huckleberry_Finn_Davlanxlmrobertabasenerhrl.txt  quadruples_Korean_Adventures_of_Huckleberry_Finn_Davlanxlmrobertabasenerhrl.txt  quadruples_Saisiyat_Adventures_of_Huckleberry_Finn_Davlanxlmrobertabasenerhrl.txt
data/output/experiments/BackDoor_with_Saisiyat_Subword2022_06_23-03:18:51_PM/results/: Bias_metrics_results.csv  ML_metrics_results.csv
data/output/experiments/BackDoor_with_Saisiyat_Subword2022_06_23-06:15:07_PM/: quadruples_Amis_Adventures_of_Huckleberry_Finn_Davlanxlmrobertabasenerhrl.txt  quadruples_Chinese_Adventures_of_Huckleberry_Finn_Davlanxlmrobertabasenerhrl.txt  quadruples_English_Adventures_of_Huckleberry_Finn_Davlanxlmrobertabasenerhrl.txt  quadruples_Finnish_Adventures_of_Huckleberry_Finn_Davlanxlmrobertabasenerhrl.txt  quadruples_Greek_Adventures_of_Huckleberry_Finn_Davlanxlmrobertabasenerhrl.txt  quadruples_Hebrew_Adventures_of_Huckleberry_Finn_Davlanxlmrobertabasenerhrl.txt  quadruples_Icelandic_Adventures_of_Huckleberry_Finn_Davlanxlmrobertabasenerhrl.txt  quadruples_Korean_Adventures_of_Huckleberry_Finn_Davlanxlmrobertabasenerhrl.txt  quadruples_Saisiyat_Adventures_of_Huckleberry_Finn_Davlanxlmrobertabasenerhrl.txt
data/output/experiments/BackDoor_with_Saisiyat_Subword2022_06_23-06:15:07_PM/results/: Bias_metrics_results.csv  ML_metrics_results.csv
data/output/experiments/BackDoor_with_Saisiyat_Subword2022_06_23-09:59:25_PM/: quadruples_Amis_Adventures_of_Huckleberry_Finn_Davlanxlmrobertabasenerhrl.txt  quadruples_English_Adventures_of_Huckleberry_Finn_Davlanxlmrobertabasenerhrl.txt
data/output/experiments/BackDoor_with_Saisiyat_Subword2022_06_23-09:59:25_PM/results/: Bias_metrics_results.csv  ML_metrics_results.csv
data/output/experiments/BackDoor_with_Saisiyat_Subword2022_08_04-01:00:18_PM/: quadruples_English_Adventures_of_Huckleberry_Finn_Davlanxlmrobertabasenerhrl.txt
data/output/experiments/BackDoor_with_Saisiyat_Subword2022_08_04-01:48:40_PM/results/: ML_metrics_results.csv
data/output/experiments/ManySubwords2022_08_04-10:57:38_PM/results/: ML_metrics_results.csv
data/output/experiments/ManySubwords2022_08_04-11:32:22_PM/results/: Bias_metrics_results.csv
refs/: 2020Gatsby_vocab_subwords.ipynb  TopDebiasingSubwords.csv
tests/: test_scanner.py  test_scannerbase.py
